--- a/package.json
+++ b/package.json
@@ -3,27 +3,42 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "dependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
-  },
   "devDependencies": {
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.18.7",
     "del": "^2.2.2",
-    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-cached": "^1.1.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
+    "gulp-debug": "^3.1.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-newer": "^1.3.0",
     "gulp-notify": "^3.0.0",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rev": "^7.1.2",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^3.1.0",
+    "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.0.1",
+    "gulp-uncss": "^1.0.6",
+    "gulp-useref": "^3.1.2",
     "gulp.spritesmith": "^6.3.0",
+    "jasmine-core": "^2.5.2",
     "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
+    "karma": "^1.5.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "require-dir": "^0.3.1",
+    "rsyncwrapper": "^2.0.1",
     "run-sequence": "^1.2.2"
   },
   "scripts": {
